Fixbutton spacings in player, player now finished

--- a/theme.css
+++ b/theme.css
@@ -2138,7 +2138,7 @@
       font-family: "Material Icons";
   }
   .btnFastForward{
-      margin-right: 1em !important; 
+      margin-left: 1em !important; 
       content: "forward_10";
       font-family: "Material Icons";
   }
